# Mobile-Controllers

./: README.md  pubspec.yaml  rule.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/di/: service_locator.dart
lib/core/error/: failure.dart  result.dart
lib/core/usecase/: usecase.dart
lib/features/connection/data/repositories/: connection_repository_impl.dart
lib/features/connection/domain/repositories/: connection_repository.dart
lib/features/connection/domain/usecases/: advertise_presence.dart  connect_to_device.dart  disconnect_device.dart  listen_connection_status.dart  scan_for_devices.dart  start_server.dart
lib/features/connection/presentation/cubit/: connection_cubit.dart  connection_state.dart
lib/features/connection/presentation/pages/: connection_page.dart
lib/features/input_capture/data/models/: input_event.dart
lib/features/input_capture/data/sources/: accessibility_helper.dart  android_input_receiver.dart  input_hook_service.dart  windows_mouse_monitor.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/input_hook/: Cargo.toml  README.md
native/input_hook/src/: lib.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+4 files in other folders)
