[package]
name = "input_hook"
version = "0.1.0"
edition = "2021"

[lib]
name = "input_hook"
crate-type = ["cdylib"]

[dependencies]
rdev = "0.5" # For cross-platform input hooks
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse"] }
